# post-purchase-multiagent-chatbot

./: README.md  config.yaml  main.py  pyproject.toml  requirements.txt
agents/: __init__.py  controller_agent.py  exchange_agent.py  monitor_agent.py  resolution_agent.py  visual_agent.py
app/: streamlit_app.py
app/components/: analytics_dashboard.py  chat_interface.py  visual_upload.py
app/styles/: custom.css
data/knowledge/: common_issues.json  faq.json  faq_embeddings.json  return_reasons.json
data/playbooks/: escalation_rules.json  playbook_embeddings.json  proactive_triggers.json  resolution_playbooks.json
data/policies/: exchange_policy.json  policy_embeddings.json  refund_policy.json  return_policy.json  shipping_policy.json
data/products/: product_catalog.json  product_embeddings.json
data/templates/: conversation_templates.json  response_templates.json
database/: models.py  pinecone_config.py  supabase_config.py  vector_store.py
orchestration/: __init__.py  langgraph_flow.py  routing_logic.py  state_management.py
scripts/: generate_embeddings.py  load_data.py  setup_pinecone.py  setup_supabase.py
tests/: test_agents.py  test_orchestration.py  test_vector_search.py
utils/: __init__.py  embeddings.py  image_processing.py  logger.py  text_processing.py
